src/test/ui/conditional-compilation/cfg_accessible-stuck.stderr
error: cannot determine whether the path is accessible or not
  --> $DIR/cfg_accessible-stuck.rs:6:1
   |
LL | #[cfg_accessible(S)]
   | ^^^^^^^^^^^^^^^^^^^^

error: cannot determine whether the path is accessible or not
  --> $DIR/cfg_accessible-stuck.rs:3:1
   |
LL | #[cfg_accessible(Z)]
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

